--- a/gui.ui
+++ b/gui.ui
@@ -37,6 +37,9 @@
           <property name="text">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;img src=&quot;:/newPrefix/awai.bmp&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
+          <property name="buddy">
+           <cstring>label_2</cstring>
+          </property>
          </widget>
         </item>
        </layout>
@@ -225,23 +228,40 @@
      <height>25</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuOuvrir">
+   <widget class="QMenu" name="menuOpen">
     <property name="title">
-     <string>Ou&amp;vrir</string>
+     <string>Open</string>
     </property>
-    <addaction name="actionNouvelle_partie"/>
-    <addaction name="actionQuitter"/>
+    <addaction name="actionNewGame"/>
+    <addaction name="actionQuit"/>
    </widget>
-   <addaction name="menuOuvrir"/>
+   <addaction name="menuOpen"/>
   </widget>
-  <action name="actionNouvelle_partie">
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <action name="actionNewGame">
    <property name="text">
-    <string>&amp;Nouvelle partie</string>
+    <string>New Game</string>
+   </property>
+   <property name="iconText">
+    <string>New Game</string>
    </property>
   </action>
-  <action name="actionQuitter">
+  <action name="actionQuit">
    <property name="text">
-    <string>&amp;Quitter</string>
+    <string>&amp;Quit</string>
+   </property>
+   <property name="iconText">
+    <string>Quit</string>
    </property>
   </action>
  </widget>
@@ -250,7 +270,7 @@
  </resources>
  <connections>
   <connection>
-   <sender>actionQuitter</sender>
+   <sender>actionQuit</sender>
    <signal>triggered()</signal>
    <receiver>AwAI</receiver>
    <slot>close()</slot>
@@ -265,5 +285,25 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionNewGame</sender>
+   <signal>triggered()</signal>
+   <receiver>AwAI</receiver>
+   <slot>new()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>567</x>
+     <y>424</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
+ <slots>
+  <slot>new()</slot>
+  <slot>setValue()</slot>
+ </slots>
 </ui>
