--- a/gui.ui
+++ b/gui.ui
@@ -47,7 +47,7 @@
       <item>
        <layout class="QGridLayout" name="gridLayout">
         <item row="4" column="1">
-         <widget class="QPushButton" name="pushButton_8">
+         <widget class="QPushButton" name="pushButton_2">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -60,7 +60,7 @@
          </widget>
         </item>
         <item row="4" column="5">
-         <widget class="QPushButton" name="pushButton_12">
+         <widget class="QPushButton" name="pushButton_6">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -80,7 +80,7 @@
          </widget>
         </item>
         <item row="4" column="2">
-         <widget class="QPushButton" name="pushButton_9">
+         <widget class="QPushButton" name="pushButton_3">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -93,7 +93,7 @@
          </widget>
         </item>
         <item row="4" column="0">
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="pushButton_1">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -106,7 +106,7 @@
          </widget>
         </item>
         <item row="2" column="2">
-         <widget class="QPushButton" name="pushButton_4">
+         <widget class="QPushButton" name="pushButton_10">
           <property name="enabled">
            <bool>true</bool>
           </property>
@@ -122,7 +122,7 @@
          </widget>
         </item>
         <item row="4" column="3">
-         <widget class="QPushButton" name="pushButton_10">
+         <widget class="QPushButton" name="pushButton_4">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -135,7 +135,7 @@
          </widget>
         </item>
         <item row="2" column="3">
-         <widget class="QPushButton" name="pushButton_5">
+         <widget class="QPushButton" name="pushButton_9">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -148,7 +148,7 @@
          </widget>
         </item>
         <item row="4" column="4">
-         <widget class="QPushButton" name="pushButton_11">
+         <widget class="QPushButton" name="pushButton_5">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -161,7 +161,7 @@
          </widget>
         </item>
         <item row="2" column="4">
-         <widget class="QPushButton" name="pushButton_6">
+         <widget class="QPushButton" name="pushButton_8">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -174,7 +174,7 @@
          </widget>
         </item>
         <item row="2" column="0">
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="pushButton_12">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -187,7 +187,7 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QPushButton" name="pushButton_3">
+         <widget class="QPushButton" name="pushButton_11">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -250,7 +250,7 @@
   </widget>
   <action name="actionNewGame">
    <property name="text">
-    <string>New Game</string>
+    <string>&amp;New Game</string>
    </property>
    <property name="iconText">
     <string>New Game</string>
@@ -282,22 +282,6 @@
     <hint type="destinationlabel">
      <x>553</x>
      <y>397</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>actionNewGame</sender>
-   <signal>triggered()</signal>
-   <receiver>AwAI</receiver>
-   <slot>new()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>567</x>
-     <y>424</y>
     </hint>
    </hints>
   </connection>
