--- a/gui.ui
+++ b/gui.ui
@@ -255,6 +255,9 @@
    <property name="iconText">
     <string>New Game</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
   </action>
   <action name="actionQuit">
    <property name="text">
@@ -262,6 +265,9 @@
    </property>
    <property name="iconText">
     <string>Quit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
  </widget>
